--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   http: ^1.2.2
+  animate_do: ^3.3.4 #
 
 dev_dependencies:
   flutter_test:
